Fixes facebook like wrapping on mobile.

--- a/src/documents/styles.css.less
+++ b/src/documents/styles.css.less
@@ -138,6 +138,10 @@ article {
         vertical-align: top !important;
       }
 
+      > .fb-like {
+        width: auto !important;
+      }
+
       > * {
         height: 20px !important;
         display: inline-block !important;
@@ -163,7 +167,6 @@ article {
 
     p.read-more {
       a:after {
-        content: ' ➤';
         font-weight: bold;
       }
     }
